# TCGAL

./: Cargo.toml  README.md
examples/wasm/: index.html  package.json  pnpm-lock.yaml
examples/wasm/src/: App.tsx  main.css  main.tsx
rcgal_wasm/: vite.config.ts
src/: algorithm.rs  data_structure.rs  geometry.rs  kernel.rs  lib.rs  math.rs  number_type.rs  topo.rs  traits.rs  wasm.rs
src/algorithm/: arrangement.rs  convex_hull.rs  intersection.rs  location.rs  projection.rs  triangulation.rs  util.rs
src/algorithm/arrangement/: arrangement_2.rs  util.rs
src/algorithm/convex_hull/: convex_hull_2.rs
src/algorithm/intersection/: arc_segment_2_arc_segment_2.rs  circle_segment_2_arc_segment_2.rs  circle_segment_2_circle_segment_2.rs  edge_2_edge_2.rs  line_2_line_2.rs  line_2_ray_2.rs  line_segment_2_arc_segment_2.rs  segment_2_circle_2.rs  (+8 more)
src/data_structure/: avl_tree.rs  circular_doubly_linked_list.rs  priority_queue.rs
src/geometry/: arc_2.rs  circle_2.rs  line_2.rs  point_2.rs  ray_2.rs  segment_2.rs
src/kernel/: arc_2.rs  arc_segment_2.rs  base_dcel.rs  base_kernel.rs  circle_2.rs  circle_segment_2.rs  edge_2.rs  face_2.rs  line_2.rs  line_segment_2.rs  number_type.rs  point_2.rs  polygon_2.rs  ray_2.rs  segment_2.rs  simple_cartesian.rs  triangle_2.rs  util_enum.rs  vector_2.rs  vertex_2.rs
src/math/: vector_2.rs
src/number_type/: base_number_type_trait.rs  eps.rs
src/topo/: arrangement_2.rs  edge_2.rs  face_2.rs  line_2.rs  point_2.rs  segment_2.rs  vertex_2.rs
src/traits/: eps.rs  is_equal.rs  is_parallel.rs  is_same.rs
src/wasm/: kernel.rs
(+71 files in other folders)
