[package]
name = "rcgal"
authors = ["liuyulvv"]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust Computational Geometry Algorithms Library."
repository = "https://github.com/liuyulvv/rcgal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
