[package]
name = "rcgal"
authors = ["liuyulvv"]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust Computational Geometry Algorithms Library."
repository = "https://github.com/liuyulvv/rcgal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
